Added navigation menu and 12 paragraphs in index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,26 @@
   
   <body>
     <!-- write your html here-->
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Products</li>
+        <li>Services</li>
+        <li>About us</li>
+        <li>Contact us</li>
+      </ul>
+    </nav>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus, rerum, illo, nostrum eos ab odio expedita perferendis alias cupiditate pariatur odit mollitia modi consectetur sunt quis magnam nam hic cumque.</p>
+    <p>Sequi, eos, officia, esse, architecto expedita dolores eveniet dolore neque adipisci commodi vitae quia voluptatibus perferendis vero nobis error fugiat ab. Perferendis, excepturi quos consequuntur maiores eaque quod eum saepe!</p>
+    <p>Eveniet, excepturi, ex, sit, maiores tempora optio nesciunt et explicabo corporis voluptatem praesentium veniam sint expedita obcaecati temporibus. Totam voluptatem libero distinctio fugit dolor voluptates corporis asperiores beatae molestias optio.</p>
+    <p>Quae, ex autem explicabo iste deleniti obcaecati culpa tempora eligendi labore doloribus! Exercitationem, ad, tenetur praesentium consequuntur recusandae ipsam aspernatur quaerat. Maiores, sit, aliquid sapiente possimus officia ad nostrum vitae.</p>
+    <p>Impedit, itaque, quibusdam est magnam sed reiciendis ea aliquid deleniti repudiandae corrupti sint optio velit sequi. Est, totam aspernatur cumque natus rem minima itaque quas nemo et minus voluptates iure!</p>
+    <p>Necessitatibus, neque fugit exercitationem culpa illum ex harum eaque amet repellendus quis nostrum fuga consequuntur inventore voluptatem dignissimos facilis sed quae ut repellat sint perspiciatis suscipit reiciendis dolorum asperiores pariatur.</p>
+    <p>Nostrum, sit mollitia ipsa! Consequuntur, similique eos ipsam aspernatur dignissimos enim sed obcaecati ratione ipsum ex? Minus, molestias, magni, commodi iure perspiciatis mollitia ducimus numquam facere temporibus tempore et beatae!</p>
+    <p>Hic, animi, rem aut aperiam laudantium magni aspernatur sunt distinctio explicabo labore repudiandae enim cum earum. Voluptas, pariatur, iusto laborum odit esse officia consequatur sed similique unde alias iste voluptate.</p>
+    <p>Illum, eum, ex, ducimus, rerum est quis consectetur corporis inventore explicabo consequatur cupiditate ratione. Qui sequi rem sed facilis earum nostrum ex. Ullam deserunt laudantium quia esse optio? Pariatur, doloremque.</p>
+    <p>Impedit, iusto, inventore, explicabo accusamus perferendis quasi adipisci repellat beatae ducimus vitae assumenda aspernatur ullam nam vel quia ratione rerum commodi consequatur at sunt aut pariatur nulla magnam ea molestias!</p>
+    <p>Corrupti, numquam, voluptate, quasi, odio molestiae consequatur reprehenderit consequuntur tempora vel provident molestias unde iste incidunt modi labore repellendus fugit nisi officiis ratione perferendis recusandae vero eos nihil esse veniam.</p>
+    <p>Iste, magnam eaque ipsa fugit unde temporibus recusandae provident quo eum id blanditiis pariatur totam cupiditate repellendus tempora dignissimos minus corporis praesentium quasi aliquam consequuntur voluptates inventore excepturi asperiores dolor.</p>
   </body>
 </html>
