adapted index.html to respect BEM

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <!-- write your html here-->
     <aside class="dialog-box">
-      <h1 class="dialog-box_title">Hello World</h1>
-      <div class="dialog-box_content">
+      <h1 class="dialog-box__title">Hello World</h1>
+      <div class="dialog-box__content">
         <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
           sed diam nonummy nibh euismod tincidunt ut laoreet dolore
           magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
@@ -35,6 +35,7 @@
           in futurum.
         </p>
       </div>
+        <button class="dialog-box__close"></button>
     </aside>
   </body>
 </html>
