added html structure and created a images folder with pumpkings.jpg inside

--- a/index.html
+++ b/index.html
@@ -10,5 +10,37 @@
   
   <body>
     <!-- write your html here-->
+    <ul>
+      <li><img src="images/pumpkins.jpg"></img></li>     
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+      <li><img src="images/pumpkins.jpg"></img></li> 
+    </ul>
   </body>
 </html>
