--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <head>
     <title>CSS Workshop Exercise</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/foundation.css" type="text/css" />
     <!-- add any css links here-->
   </head>
   
   <body>
     <!-- write your html here-->
-    <ul>
+    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
       <li><img src="images/pumpkins.jpg"></img></li>     
       <li><img src="images/pumpkins.jpg"></img></li> 
       <li><img src="images/pumpkins.jpg"></img></li> 
