created a responsive image thumbnail grid manually and created a images folder with pumpkins.jpg

--- a/index.html
+++ b/index.html
@@ -1,46 +1,29 @@
-<!doctype html>
-<html>
+<!doctype html >
+  <html>
 
   <head>
-    <title>CSS Workshop Exercise</title>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/foundation.css" type="text/css" />
-    <!-- add any css links here-->
+    <link rel="stylesheet" href="css/main.css">
+     <!-- add any css links here-->
   </head>
   
   <body>
     <!-- write your html here-->
-    <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
-      <li><img src="images/pumpkins.jpg"></img></li>     
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-      <li><img src="images/pumpkins.jpg"></img></li> 
-    </ul>
+  <section class="grid"> 
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+    <img src="images/pumpkins.jpg" alt="pumpkins">
+  </section> 
   </body>
 </html>
