added fondation.css and changed the width of the image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>CSS Workshop Exercise</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/foundation.css" type="text/css" />
+    <link rel="stylesheet" href="css/main.css">
     <!-- add any css links here-->
   </head>
   
